experimental/ir/testdata/options/validate/presence.proto.stderr.txt
error: unexpected `optional`
  --> testdata/options/validate/presence.proto:36:5
   |
36 |     optional int32 a1 = 10;
   |     ^^^^^^^^ expected type name or `repeated`
  help: delete it
   |
36 | -     optional int32 a1 = 10;
36 | +     int32 a1 = 10;
   |
   = help: in editions mode, the presence behavior of a singular field is
           controlled with `[feature.field_presence = ...]`, with the default
           being equivalent to proto2 `optional`
   = help: see <https://protobuf.com/docs/language-spec#field-presence>

error: unexpected `required`
  --> testdata/options/validate/presence.proto:37:5
   |
37 |     required int32 a1 = 11;
   |     ^^^^^^^^ expected type name or `repeated`
  help: delete it
   |
37 | -     required int32 a1 = 11;
37 | +     int32 a1 = 11;
   |
   = help: required fields are only permitted in proto2; even then, their use is
           strongly discouraged

error: cannot set `LEGACY_REQUIRED` at the file level
  --> testdata/options/validate/presence.proto:20:34
   |
20 | option features.field_presence = LEGACY_REQUIRED;
   |                                  ^^^^^^^^^^^^^^^

error: expected singular field, found repeated field
  --> testdata/options/validate/presence.proto:23:5
   |
23 |     repeated int32 x = 1 [features.field_presence = EXPLICIT];
   |     ^^^^^^^^^^^^^^        ----------------------- `field_presence` set here
   = help: `field_presence` can only be set on singular fields

error: expected singular field, found map field
  --> testdata/options/validate/presence.proto:24:5
   |
24 |     map<int32, int32> y = 2 [features.field_presence = EXPLICIT];
   |     ^^^^^^^^^^^^^^^^^        ----------------------- `field_presence` set here
   = help: `field_presence` can only be set on singular fields

error: expected singular field, found oneof member
  --> testdata/options/validate/presence.proto:27:9
   |
26 | /     oneof o {
27 | |         int32 z = 3 [features.field_presence = EXPLICIT];
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |                      |
   | |                      `field_presence` set here
28 | |     }
   | \_____- defined in this oneof
   = help: `field_presence` cannot be set on oneof members
   = help: all oneof members have explicit presence

error: expected message type, found message type `buf.test.Foo`
  --> testdata/options/validate/presence.proto:32:5
   |
32 |     Foo m = 5 [features.field_presence = IMPLICIT];
   |     ^^^                                  -------- implicit presence set here
   = help: all message-typed fields explicit presence

warning: required fields are deprecated
  --> testdata/options/validate/presence.proto:34:44
   |
34 |     int32 r = 6 [features.field_presence = LEGACY_REQUIRED];
   |                                            ^^^^^^^^^^^^^^^
   = help: do not attempt to change this to `EXPLICIT` if the field is already
           in-use; doing so is a wire protocol break

error: `a1` declared multiple times
  --> testdata/options/validate/presence.proto:36:20
   |
36 |     optional int32 a1 = 10;
   |                    ^^ first here, as a message field
37 |     required int32 a1 = 11;
   |                    -- ...also declared here

error: expected singular field, found extension
  --> testdata/options/validate/presence.proto:41:5
   |
41 |     int32 e = 4 [features.field_presence = EXPLICIT];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                  |
   |                  `field_presence` set here
   = help: `field_presence` cannot be set on extensions
   = help: all singular extensions have explicit presence

encountered 9 errors and 1 warning
